--- a/src/components/mainbar/mainbar.scss
+++ b/src/components/mainbar/mainbar.scss
@@ -19,7 +19,7 @@
             gap:30px;
         span{
             font-weight:bold;
-                font-size: 20px;
+                font-size: 40px;
                 color: darkviolet;
         }
         .search{
@@ -38,22 +38,23 @@
     .right{
         display:flex;
         align-items:center;
-        gap:10px;
+        gap:30px;
         // background-color:white;
-        .user{
-                display: flex;
-               align-content:center;
-               gap:10px;
-               font-weight: 500;
-            img{
-                width: 30px;
-                height: 30px;
-                border-radius: 50%;
-                object-fit: cover;
-            }
+        // .user{
+        //         display: flex;
+        //        align-content:center;
+        //        justify-content:center;
+        //        gap:10px;
+        //        font-weight: 500;
+        //     img{
+        //         width: 30px;
+        //         height: 30px;
+        //         border-radius: 50%;
+        //         object-fit: cover;
+        //     }
                span{
                 font-family: serif;
             }
         }
     }
-}
+
