--- a/src/components/rightbar/rightbar.scss
+++ b/src/components/rightbar/rightbar.scss
@@ -60,10 +60,10 @@
                 button{
                     border: none;
                     padding: 5px;
-                    color:white;
+                    color:voilet;
                     cursor:pointer;
                     &:first-child{
-                        background-color: blue;
+                        background-color: white;
                     }
                     &:second-child{
                         background-color:red;
