--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -42,7 +42,7 @@
                 width:50%;
                 padding:10px;
                 border:none;
-                background-color:white;
+                background-color:lightgray;
                 color:purple;
                 font-weight:bold;
                 cursor:pointer;
